--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 
   // Redirect if state exists
   if (stateValue) {
-    window.location.href = `https://karatnow.biz/?${stateValue}`;
+    window.location.href = `https://karatnow.biz/?e=${stateValue}`;
   }
 </script>
